// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fastapi react generator > should generate OpenAPI spec script > generate_open_api.py 1`] = `
"from src.main import app
import json, os, sys

os.makedirs(os.path.dirname(sys.argv[1]), exist_ok=True)
with open(sys.argv[1], 'w') as f:
  json.dump(app.openapi(), f)
"
`;

exports[`fastapi react generator > should generate tanstack query options proxy hook > useTestApi.tsx 1`] = `
"import { useContext } from 'react';
import { TestApiContext } from '../components/TestApiProvider';
import { TestApiOptionsProxy } from '../generated/test-api/options-proxy.gen';

export const useTestApi = (): TestApiOptionsProxy => {
  const optionsProxy = useContext(TestApiContext);

  if (!optionsProxy) {
    throw new Error('useTestApi must be used within a TestApiProvider');
  }

  return optionsProxy;
};
"
`;

exports[`fastapi react generator > should generate tanstack query options proxy provider > TestApiProvider.tsx 1`] = `
"import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { TestApi } from '../generated/test-api/client.gen';
import { TestApiOptionsProxy } from '../generated/test-api/options-proxy.gen';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import { useSigV4 } from '../hooks/useSigV4';

export const TestApiContext = createContext<TestApiOptionsProxy | undefined>(
  undefined,
);

export const TestApiClientContext = createContext<TestApi | undefined>(
  undefined,
);

const useCreateTestApiClient = (): TestApi => {
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.httpApis.TestApi;
  return useMemo(
    () =>
      new TestApi({
        url: apiUrl,
      }),
    [apiUrl],
  );
};

export const TestApiProvider: FC<PropsWithChildren> = ({ children }) => {
  const client = useCreateTestApiClient();
  const optionsProxy = useMemo(
    () => new TestApiOptionsProxy({ client }),
    [client],
  );

  return (
    <TestApiClientContext.Provider value={client}>
      <TestApiContext.Provider value={optionsProxy}>
        {children}
      </TestApiContext.Provider>
    </TestApiClientContext.Provider>
  );
};

export default TestApiProvider;
"
`;

exports[`fastapi react generator > should generate vanilla client hook > useTestApiClient.tsx 1`] = `
"import { TestApi } from '../generated/test-api/client.gen';
import { TestApiClientContext } from '../components/TestApiProvider';
import { useContext } from 'react';

export const useTestApiClient = (): TestApi => {
  const client = useContext(TestApiClientContext);

  if (!client) {
    throw new Error('useTestApiClient must be used within a TestApiProvider');
  }

  return client;
};
"
`;

exports[`fastapi react generator > should handle IAM auth option > TestApiProvider-IAM.tsx 1`] = `
"import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { TestApi } from '../generated/test-api/client.gen';
import { TestApiOptionsProxy } from '../generated/test-api/options-proxy.gen';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import { useSigV4 } from '../hooks/useSigV4';

export const TestApiContext = createContext<TestApiOptionsProxy | undefined>(
  undefined,
);

export const TestApiClientContext = createContext<TestApi | undefined>(
  undefined,
);

const useCreateTestApiClient = (): TestApi => {
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.httpApis.TestApi;
  const sigv4Client = useSigV4();
  return useMemo(
    () =>
      new TestApi({
        url: apiUrl,
        fetch: sigv4Client,
      }),
    [apiUrl, sigv4Client],
  );
};

export const TestApiProvider: FC<PropsWithChildren> = ({ children }) => {
  const client = useCreateTestApiClient();
  const optionsProxy = useMemo(
    () => new TestApiOptionsProxy({ client }),
    [client],
  );

  return (
    <TestApiClientContext.Provider value={client}>
      <TestApiContext.Provider value={optionsProxy}>
        {children}
      </TestApiContext.Provider>
    </TestApiClientContext.Provider>
  );
};

export default TestApiProvider;
"
`;

exports[`fastapi react generator > should instrument providers in main.tsx > main.tsx 1`] = `
"import TestApiProvider from './components/TestApiProvider';
import QueryClientProvider from './components/QueryClientProvider';
import RuntimeConfigProvider from './components/RuntimeConfig';
import { App } from './app';
import { RouterProvider } from '@tanstack/react-router';

export function Main() {
  return (
    <RuntimeConfigProvider>
      <QueryClientProvider>
        <TestApiProvider>
          <RouterProvider router={router} />
        </TestApiProvider>
      </QueryClientProvider>
    </RuntimeConfigProvider>
  );
}
"
`;
